--- a/FreydCategoriesForCAP/Project.toml
+++ b/FreydCategoriesForCAP/Project.toml
@@ -12,6 +12,14 @@ MatricesForHomalg = "29b9b1b6-efa6-450e-8188-a5a2c25df071"
 CAP = "d64df2ee-d2bb-46f4-8cbc-f03bb858f8cb"
 MonoidalCategories = "bfd98c86-782f-4b94-909f-74167f1eb613"
 LinearAlgebraForCAP = "3dc4824f-14ac-4ab7-8a60-75dbcd4a9d60"
+CartesianCategories = "c5961c08-7b59-43f4-a15e-02b3e7c87ab8" # packages which define new CAP operations currently have to be direct dependencies
+Toposes = "36a15fe6-6211-457f-8fdb-aa2e0d2f3052" # packages which define new CAP operations currently have to be direct dependencies
+
+[weakdeps]
+FinSetsForCAP = "0a079e9b-4bc2-44fe-a89b-7607e4464786"
+
+[extensions]
+FreydCategoriesForCAPFinSetsForCAPExtension = ["FinSetsForCAP"]
 
 [compat]
 julia = "1.9"
@@ -19,6 +27,7 @@ julia = "1.9"
 [extras]
 Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
+FinSetsForCAP = "0a079e9b-4bc2-44fe-a89b-7607e4464786"
 
 [targets]
-test = ["Test", "Documenter"]
+test = ["Test", "Documenter", "FinSetsForCAP"]
