--- a/FinSetsForCAP/Project.toml
+++ b/FinSetsForCAP/Project.toml
@@ -14,6 +14,9 @@ Toposes = "36a15fe6-6211-457f-8fdb-aa2e0d2f3052"
 
 [compat]
 julia = "1.11"
+CAP = "0.1"
+CartesianCategories = "0.1"
+Toposes = "0.1"
 
 [extras]
 Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
