--- a/Toposes/Project.toml
+++ b/Toposes/Project.toml
@@ -14,6 +14,8 @@ CartesianCategories = "c5961c08-7b59-43f4-a15e-02b3e7c87ab8"
 
 [compat]
 julia = "1.11"
+CAP = "0.1"
+CartesianCategories = "0.1"
 
 [extras]
 Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
