updated email addresses of Sebastian Gutsche and Fabian Zickgraf

--- a/FinSetsForCAP/Project.toml
+++ b/FinSetsForCAP/Project.toml
@@ -3,7 +3,7 @@ uuid = "0a079e9b-4bc2-44fe-a89b-7607e4464786"
 authors = [
 	"Mohamed Barakat <mohamed.barakat@uni-siegen.de>",
 	"Julia Mickisch <julia.mickisch@student.uni-siegen.de>",
-	"Fabian Zickgraf <fabian.zickgraf@uni-siegen.de>",
+	"Fabian Zickgraf <fabian.zickgraf@mailbox.org>",
 ]
 version = "0.1.0"
 
