--- a/LinearAlgebraForCAP/Project.toml
+++ b/LinearAlgebraForCAP/Project.toml
@@ -1,9 +1,9 @@
 name = "LinearAlgebraForCAP"
 uuid = "3dc4824f-14ac-4ab7-8a60-75dbcd4a9d60"
 authors = [
-	"Sebastian Gutsche <gutsche@mathematik.uni-siegen.de>",
+	"Sebastian Gutsche <sebastian.gutsche@gmail.com>",
 	"Sebastian Posur <sebastian.posur@uni-muenster.de>",
-	"Fabian Zickgraf <fabian.zickgraf@uni-siegen.de>",
+	"Fabian Zickgraf <fabian.zickgraf@mailbox.org>",
 ]
 version = "0.1.0"
 
