--- a/Toposes/Project.toml
+++ b/Toposes/Project.toml
@@ -4,7 +4,7 @@ authors = [
 	"Mohamed Barakat <mohamed.barakat@uni-siegen.de>",
 	"Tom Kuhmichel <tom.kuhmichel@student.uni-siegen.de>",
 	"Mario Román <mromang08@gmail.com>",
-	"Fabian Zickgraf <fabian.zickgraf@uni-siegen.de>",
+	"Fabian Zickgraf <fabian.zickgraf@mailbox.org>",
 ]
 version = "0.1.0"
 
