switch AbstractAlgebra -> Nemo

--- a/LinearAlgebraForCAP/Project.toml
+++ b/LinearAlgebraForCAP/Project.toml
@@ -14,6 +14,9 @@ MonoidalCategories = "bfd98c86-782f-4b94-909f-74167f1eb613"
 
 [compat]
 julia = "1.11"
+MatricesForHomalg = "0.1"
+CAP = "0.3"
+MonoidalCategories = "0.1"
 
 [extras]
 Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
