--- a/FreydCategoriesForCAP/Project.toml
+++ b/FreydCategoriesForCAP/Project.toml
@@ -23,6 +23,13 @@ FreydCategoriesForCAPFinSetsForCAPExtension = ["CartesianCategories", "Toposes",
 
 [compat]
 julia = "1.11"
+MatricesForHomalg = "0.1"
+CAP = "0.3"
+MonoidalCategories = "0.1"
+LinearAlgebraForCAP = "0.1"
+CartesianCategories = "0.1"
+Toposes = "0.1"
+FinSetsForCAP = "0.1"
 
 [extras]
 Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
