--- a/ModulePresentationsForCAP/Project.toml
+++ b/ModulePresentationsForCAP/Project.toml
@@ -15,6 +15,10 @@ LinearAlgebraForCAP = "3dc4824f-14ac-4ab7-8a60-75dbcd4a9d60"
 
 [compat]
 julia = "1.11"
+MatricesForHomalg = "0.1"
+CAP = "0.3"
+MonoidalCategories = "0.1"
+LinearAlgebraForCAP = "0.1"
 
 [extras]
 Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
