--- a/FinSetsForCAP/Project.toml
+++ b/FinSetsForCAP/Project.toml
@@ -3,9 +3,9 @@ uuid = "0a079e9b-4bc2-44fe-a89b-7607e4464786"
 authors = [
 	"Mohamed Barakat <mohamed.barakat@uni-siegen.de>",
 	"Julia Mickisch <julia.mickisch@student.uni-siegen.de>",
-	"Fabian Zickgraf <fabian.zickgraf@mailbox.org>",
+	"Fabian Zickgraf <f.zickgraf@dashdos.com>",
 ]
-version = "0.1.2"
+version = "0.1.3"
 
 [deps]
 CAP = "d64df2ee-d2bb-46f4-8cbc-f03bb858f8cb"
