--- a/FreydCategoriesForCAP/Project.toml
+++ b/FreydCategoriesForCAP/Project.toml
@@ -3,9 +3,9 @@ uuid = "cec356e3-7627-4f73-8308-af32cbf46c2b"
 authors = [
 	"Sebastian Posur <sebastian.posur@uni-muenster.de>",
 	"Martin Bies <martin.bies@alumni.uni-heidelberg.de>",
-	"Fabian Zickgraf <fabian.zickgraf@mailbox.org>",
+	"Fabian Zickgraf <f.zickgraf@dashdos.com>",
 ]
-version = "0.1.0"
+version = "0.1.1"
 
 [deps]
 MatricesForHomalg = "29b9b1b6-efa6-450e-8188-a5a2c25df071"
