--- a/ModulePresentationsForCAP/Project.toml
+++ b/ModulePresentationsForCAP/Project.toml
@@ -3,9 +3,9 @@ uuid = "80a941df-def7-4d99-bd07-d3a3a468fbfc"
 authors = [
 	"Sebastian Gutsche <sebastian.gutsche@gmail.com>",
 	"Sebastian Posur <sebastian.posur@uni-muenster.de>",
-	"Fabian Zickgraf <fabian.zickgraf@mailbox.org>",
+	"Fabian Zickgraf <f.zickgraf@dashdos.com>",
 ]
-version = "0.1.0"
+version = "0.1.1"
 
 [deps]
 MatricesForHomalg = "29b9b1b6-efa6-450e-8188-a5a2c25df071"
