--- a/Toposes/Project.toml
+++ b/Toposes/Project.toml
@@ -4,9 +4,9 @@ authors = [
 	"Mohamed Barakat <mohamed.barakat@uni-siegen.de>",
 	"Tom Kuhmichel <tom.kuhmichel@student.uni-siegen.de>",
 	"Mario Román <mromang08@gmail.com>",
-	"Fabian Zickgraf <fabian.zickgraf@mailbox.org>",
+	"Fabian Zickgraf <f.zickgraf@dashdos.com>",
 ]
-version = "0.1.1"
+version = "0.1.2"
 
 [deps]
 CAP = "d64df2ee-d2bb-46f4-8cbc-f03bb858f8cb"
