Update to CAP v2025.03-05
* CAP v2025.03-05
* MonoidalCategories v2025.03-02
* CartesianCategories v2025.03-03
* LinearAlgebraForCAP v2025.03-02
* Toposes v2025.03-02

--- a/ModulePresentationsForCAP/Project.toml
+++ b/ModulePresentationsForCAP/Project.toml
@@ -16,8 +16,8 @@ LinearAlgebraForCAP = "3dc4824f-14ac-4ab7-8a60-75dbcd4a9d60"
 [compat]
 julia = "1.11"
 MatricesForHomalg = "0.1"
-CAP = "0.3"
-MonoidalCategories = "0.1"
+CAP = "0.3, 0.4"
+MonoidalCategories = "0.1, 0.2"
 LinearAlgebraForCAP = "0.1"
 
 [extras]
