--- a/FinSetsForCAP/Project.toml
+++ b/FinSetsForCAP/Project.toml
@@ -5,7 +5,7 @@ authors = [
 	"Julia Mickisch <julia.mickisch@student.uni-siegen.de>",
 	"Fabian Zickgraf <f.zickgraf@dashdos.com>",
 ]
-version = "0.1.5"
+version = "0.1.6"
 
 [deps]
 CAP = "d64df2ee-d2bb-46f4-8cbc-f03bb858f8cb"
@@ -14,8 +14,8 @@ Toposes = "36a15fe6-6211-457f-8fdb-aa2e0d2f3052"
 
 [compat]
 julia = "1.11"
-CAP = "0.1, 0.2, 0.3"
-CartesianCategories = "0.1"
+CAP = "0.1, 0.2, 0.3, 0.4"
+CartesianCategories = "0.1, 0.2"
 Toposes = "0.1"
 
 [extras]
