--- a/FreydCategoriesForCAP/Project.toml
+++ b/FreydCategoriesForCAP/Project.toml
@@ -5,7 +5,7 @@ authors = [
 	"Martin Bies <martin.bies@alumni.uni-heidelberg.de>",
 	"Fabian Zickgraf <f.zickgraf@dashdos.com>",
 ]
-version = "0.1.2"
+version = "0.1.3"
 
 [deps]
 MatricesForHomalg = "29b9b1b6-efa6-450e-8188-a5a2c25df071"
@@ -24,10 +24,10 @@ FreydCategoriesForCAPFinSetsForCAPExtension = ["CartesianCategories", "Toposes",
 [compat]
 julia = "1.11"
 MatricesForHomalg = "0.1"
-CAP = "0.3"
-MonoidalCategories = "0.1"
+CAP = "0.3, 0.4"
+MonoidalCategories = "0.1, 0.2"
 LinearAlgebraForCAP = "0.1"
-CartesianCategories = "0.1"
+CartesianCategories = "0.1, 0.2"
 Toposes = "0.1"
 FinSetsForCAP = "0.1"
 
