--- a/LinearAlgebraForCAP/Project.toml
+++ b/LinearAlgebraForCAP/Project.toml
@@ -5,7 +5,7 @@ authors = [
 	"Sebastian Posur <sebastian.posur@uni-muenster.de>",
 	"Fabian Zickgraf <f.zickgraf@dashdos.com>",
 ]
-version = "0.1.3"
+version = "0.1.4"
 
 [deps]
 MatricesForHomalg = "29b9b1b6-efa6-450e-8188-a5a2c25df071"
@@ -15,7 +15,7 @@ MonoidalCategories = "bfd98c86-782f-4b94-909f-74167f1eb613"
 [compat]
 julia = "1.11"
 MatricesForHomalg = "0.1"
-CAP = "0.4"
+CAP = "0.4, 0.5"
 MonoidalCategories = "0.2"
 
 [extras]
