--- a/ModulePresentationsForCAP/Project.toml
+++ b/ModulePresentationsForCAP/Project.toml
@@ -5,7 +5,7 @@ authors = [
 	"Sebastian Posur <sebastian.posur@uni-muenster.de>",
 	"Fabian Zickgraf <f.zickgraf@dashdos.com>",
 ]
-version = "0.1.2"
+version = "0.1.3"
 
 [deps]
 MatricesForHomalg = "29b9b1b6-efa6-450e-8188-a5a2c25df071"
@@ -16,7 +16,7 @@ LinearAlgebraForCAP = "3dc4824f-14ac-4ab7-8a60-75dbcd4a9d60"
 [compat]
 julia = "1.11"
 MatricesForHomalg = "0.1"
-CAP = "0.3, 0.4"
+CAP = "0.3, 0.4, 0.5"
 MonoidalCategories = "0.1, 0.2"
 LinearAlgebraForCAP = "0.1"
 
