--- a/Toposes/Project.toml
+++ b/Toposes/Project.toml
@@ -6,7 +6,7 @@ authors = [
 	"Mario Román <mromang08@gmail.com>",
 	"Fabian Zickgraf <f.zickgraf@dashdos.com>",
 ]
-version = "0.1.5"
+version = "0.1.6"
 
 [deps]
 CAP = "d64df2ee-d2bb-46f4-8cbc-f03bb858f8cb"
@@ -14,8 +14,8 @@ CartesianCategories = "c5961c08-7b59-43f4-a15e-02b3e7c87ab8"
 
 [compat]
 julia = "1.11"
-CAP = "0.4"
-CartesianCategories = "0.2"
+CAP = "0.4, 0.5"
+CartesianCategories = "0.2, 0.3"
 
 [extras]
 Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
