fixed env variable

--- a/.github/workflows/Test.yml
+++ b/.github/workflows/Test.yml
@@ -44,6 +44,6 @@ jobs:
       - name: Run update_subsplits script if tests pass
         if: success() && github.event_name == 'push' && matrix.julia-version == '1.11' && matrix.os == 'ubuntu-latest' && matrix.arch == 'x64'
         env:
-          SUBSPLIT_PUSH_SECRET: ${{ secrets.SUBSPLIT_PUSH_SECRET }}
+          JULIA_SUBSPLIT_TOKEN: ${{ secrets.SUBSPLIT_PUSH_SECRET }}
         run: |
           ./dev/update_subsplits.sh
