--- a/.github/workflows/Test.yml
+++ b/.github/workflows/Test.yml
@@ -11,7 +11,7 @@ permissions:
   contents: write
 jobs:
   test:
-    name: Julia ${{ matrix.julia-version }} on ${{ matrix.os }} - ${{ matrix.arch }} - ${{ github.event_name }}
+    name: Julia ${{ matrix.julia-version }} on ${{ matrix.os }} - ${{ github.event_name }}
     runs-on: ${{ matrix.os }}
     timeout-minutes: 60
     strategy:
@@ -34,13 +34,12 @@ jobs:
         uses: julia-actions/setup-julia@v2
         with:
           version: ${{ matrix.julia-version }}
-          arch: ${{ matrix.arch }}
       - name: Install all packages
         run: make install
       - name: Run tests
         run: make test
       - name: Run update_subsplits script if tests pass
-        if: success() && github.event_name == 'push' && matrix.julia-version == '1.11' && matrix.os == 'ubuntu-latest' && matrix.arch == 'x64'
+        if: success() && github.event_name == 'push' && matrix.julia-version == '1.11' && matrix.os == 'ubuntu-latest'
         env:
           JULIA_SUBSPLIT_TOKEN: ${{ secrets.SUBSPLIT_PUSH_SECRET }}
         run: |
