--- a/.github/workflows/Test.yml
+++ b/.github/workflows/Test.yml
@@ -9,6 +9,13 @@ on:
     - cron: "0 0 * * *"  # Run every day at midnight
 permissions:
   contents: write
+
+# cancel runs for pull requests on force push
+# https://docs.github.com/en/actions/using-workflows/workflow-syntax-for-github-actions#example-using-a-fallback-value
+concurrency:
+  group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.run_id }}-${{ github.run_attempt }}
+  cancel-in-progress: true
+
 jobs:
   test:
     name: Julia ${{ matrix.julia-version }} on ${{ matrix.os }} - ${{ github.event_name }}
