--- a/MonoidalCategories/Project.toml
+++ b/MonoidalCategories/Project.toml
@@ -2,23 +2,29 @@ name = "MonoidalCategories"
 uuid = "bfd98c86-782f-4b94-909f-74167f1eb613"
 authors = [
 	"Mohamed Barakat <mohamed.barakat@uni-siegen.de>",
-	"Sebastian Gutsche <sebastian.gutsche@gmail.com>",
+	"Sebastian Gutsche <gutsche@mathematik.uni-siegen.de>",
+	"Sebastian Posur <sebastian.posur@uni-siegen.de>",
 	"Tom Kuhmichel <tom.kuhmichel@student.uni-siegen.de>",
-	"Sebastian Posur <sebastian.posur@uni-muenster.de>",
-	"Fabian Zickgraf <f.zickgraf@dashdos.com>",
+	"Fabian Zickgraf <fabian.zickgraf@uni-siegen.de>"
 ]
-version = "0.2.9"
+
+# Transpiled from GAP's MonoidalCategories v2025.07-07
+version = "0.2.10"
 
 [deps]
 CAP = "d64df2ee-d2bb-46f4-8cbc-f03bb858f8cb"
+
+[weakdeps]
+
+[extensions]
 
 [compat]
 julia = "1.11"
 CAP = "0.4, 0.5, 0.6"
 
 [extras]
-Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
+Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
 
 [targets]
 test = ["Test", "Documenter"]
