--- a/ModulePresentationsForCAP/Project.toml
+++ b/ModulePresentationsForCAP/Project.toml
@@ -1,17 +1,23 @@
 name = "ModulePresentationsForCAP"
 uuid = "80a941df-def7-4d99-bd07-d3a3a468fbfc"
 authors = [
-	"Sebastian Gutsche <sebastian.gutsche@gmail.com>",
-	"Sebastian Posur <sebastian.posur@uni-muenster.de>",
-	"Fabian Zickgraf <f.zickgraf@dashdos.com>",
+	"Sebastian Gutsche <gutsche@mathematik.uni-siegen.de>",
+	"Sebastian Posur <sebastian.posur@uni-siegen.de>",
+	"Fabian Zickgraf <fabian.zickgraf@uni-siegen.de>"
 ]
-version = "0.1.7"
+
+# Transpiled from GAP's ModulePresentationsForCAP v2025.06-02
+version = "0.1.8"
 
 [deps]
 MatricesForHomalg = "29b9b1b6-efa6-450e-8188-a5a2c25df071"
 CAP = "d64df2ee-d2bb-46f4-8cbc-f03bb858f8cb"
 MonoidalCategories = "bfd98c86-782f-4b94-909f-74167f1eb613"
 LinearAlgebraForCAP = "3dc4824f-14ac-4ab7-8a60-75dbcd4a9d60"
+
+[weakdeps]
+
+[extensions]
 
 [compat]
 julia = "1.11"
@@ -21,8 +27,8 @@ MonoidalCategories = "0.1, 0.2"
 LinearAlgebraForCAP = "0.1"
 
 [extras]
-Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
+Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
 
 [targets]
 test = ["Test", "Documenter"]
