--- a/ModulePresentationsForCAP/Project.toml
+++ b/ModulePresentationsForCAP/Project.toml
@@ -1,12 +1,12 @@
 name = "ModulePresentationsForCAP"
 uuid = "80a941df-def7-4d99-bd07-d3a3a468fbfc"
 authors = [
-	"Sebastian Gutsche <gutsche@mathematik.uni-siegen.de>",
-	"Sebastian Posur <sebastian.posur@uni-siegen.de>",
-	"Fabian Zickgraf <fabian.zickgraf@uni-siegen.de>"
+	"Sebastian Gutsche <sebastian.gutsche@gmail.com>",
+	"Sebastian Posur <sebastian.posur@uni-muenster.de>",
+	"Fabian Zickgraf <f.zickgraf@dashdos.com>"
 ]
 
-# Transpiled from GAP's ModulePresentationsForCAP v2025.08-01
+# Transpiled from GAP's ModulePresentationsForCAP v2025.08-02
 version = "0.1.9"
 
 [deps]
